# decision_ai

./: .env.local  .gitignore  Dockerfile  README.md  json2csv.py  payload.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
reports/: classification_report.txt
src/decision_ai/: pipeline.py
src/decision_ai/api/: main.py
src/decision_ai/data/: ingest.py
src/decision_ai/edge/: main.py
src/decision_ai/features/: engineer.py
src/decision_ai/models/: evaluate.py  predict.py  train.py
src/decision_ai/ui/: pnpm-lock.yaml
src/decision_ai/ui/app/: page.tsx
src/decision_ai/ui/components/: CvDropzone.tsx
tests/unit/: test_engineer.py  test_ingest.py
