[tool.poetry]
name        = "decision_ai"
version     = "0.1.0"
description = "Plataforma de IA para matching candidato‑vaga (MLOps nível‑prod)."
authors     = ["Yuri Rodrigues Braz <ybraz@live.com>"]
license     = "MIT"
readme      = "README.md"
packages    = [
  { include = "decision_ai", from = "src" }
]

[tool.poetry.dependencies]
python                = "^3.11"
# ───── core data stack ─────────────────────────────────────────────
pandas                = "^2.2"
numpy                 = "^1.26"
pyarrow               = "^16.1"         # suporte Parquet
scikit-learn          = "^1.5"
joblib                = "^1.4"
tqdm                  = "^4.66"
pydantic              = "^2.7"
typer                 = { version = "^0.12", extras = ["all"] }
click                 = "8.1.*"         # pin Click to 8.1.x for Typer compatibility
# ───── NLP / Embeddings ────────────────────────────────────────────
sentence-transformers = "^2.7"
# ───── Experiment tracking & HPO (próximas etapas) ────────────────
optuna                = "^3.6"
mlflow                = "^2.12"
lightgbm              = "^4.3"
# ───── Data versioning (opcional) ─────────────────────────────────

[tool.poetry.extras]
dvc       = ["dvc"]

[tool.poetry.group.dev.dependencies]
black     = "^24.4"
isort     = "^5.13"
flake8    = "^7.0"
bandit    = "^1.7"
pytest    = "^8.2"
pytest-cov= "^5.0"
coverage  = "^7.5"
mypy      = "^1.10"
pre-commit= "^3.7"

# ───────────────────────────────────────────────────────────────────
# Formatting & Linting configs
# ───────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile        = "black"
line_length    = 100
src_paths      = ["src", "tests"]

[tool.flake8]
max-line-length = 100
extend-ignore   = ["E203", "W503"]
exclude         = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.bandit]
skips = ["B101"]     # assert‑usage: permitido em testes
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml:coverage.xml -q"
testpaths = ["tests"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"